# myproject

./: .gitignore  Dasha.ipynb  pyproject.toml
STT_TTS/: 01_langchain2-2.ipynb  02_TTS.ipynb
StreamlitChatbot/pages/: 03_chatbot.py  04_worldchatbot.py  05_writingBot.py
StreamlitChatbot/resources/: Ailderia(fantasy_world).txt  chat_history_NPC2.json
src/STT_TTS/: 01_langchain1.ipynb  01_langchain2-1.ipynb  02_STT.ipynb  03_AI_Speaker.ipynb
src/StreamlitChatbot/: main.py
src/StreamlitChatbot/pages/: 01_basic.py  02_copywriterbot.py  06_youtubeChatBot.py
src/StreamlitChatbot/resources/: chat_history_ChatBot.json  chat_history_NPC.json
tools/: VideoText.ipynb  WebText.ipynb  mbtiText.ipynb
